[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/HUD/Pause_Menu.gd" type="Script" id=1]

[node name="Pause_Menu" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Resume" type="Button" parent="."]

anchor/left = 3
anchor/right = 3
margin/left = 100.0
margin/top = 155.0
margin/right = -100.0
margin/bottom = 255.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Resume"
flat = false

[node name="Reset" type="Button" parent="."]

anchor/left = 3
anchor/right = 3
margin/left = 100.0
margin/top = 270.0
margin/right = -100.0
margin/bottom = 370.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Retry"
flat = false

[node name="Return" type="Button" parent="."]

anchor/left = 3
anchor/right = 3
margin/left = 100.0
margin/top = 385.0
margin/right = -100.0
margin/bottom = 485.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Return to main Menu"
flat = false

[node name="Quit" type="Button" parent="."]

anchor/left = 3
anchor/right = 3
margin/left = 100.0
margin/top = 500.0
margin/right = -100.0
margin/bottom = 600.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Quit"
flat = false

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]


